[package]
name = "polkadot-runtime-parachains"
version = "0.9.15"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.130", features = [ "derive" ], optional = true }
derive_more = "0.99.14"
bitflags = "1.3.2"

sp-api = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
inherents = { package = "sp-inherents", git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-std = { package = "sp-std", git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-io = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-runtime = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-session = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-staking = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-core = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
sp-keystore = { git = "https://github.com/zzm-Zhong/substrate", optional = true , branch = "polkadot-v0.9.15-fix" }

pallet-authority-discovery = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
pallet-authorship = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
pallet-balances = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
pallet-babe = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
pallet-session = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
pallet-staking = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
pallet-timestamp = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
pallet-vesting = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
frame-benchmarking = { git = "https://github.com/zzm-Zhong/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.15-fix" }
frame-support = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }
frame-system = { git = "https://github.com/zzm-Zhong/substrate", default-features = false , branch = "polkadot-v0.9.15-fix" }

xcm = { package = "xcm", path = "../../xcm", default-features = false }
xcm-executor = { package = "xcm-executor", path = "../../xcm/xcm-executor", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }

rand = { version = "0.8.3", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }

[dev-dependencies]
futures = "0.3.17"
hex-literal = "0.3.4"
keyring = { package = "sp-keyring", git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
frame-support-test = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sc-keystore = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }


[features]
default = ["std"]
no_std = []
std = [
	"bitvec/std",
	"parity-scale-codec/std",
	"rustc-hex/std",
	"scale-info/std",
	"serde",
	"primitives/std",
	"inherents/std",
	"sp-core/std",
	"sp-api/std",
	"sp-keystore",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"pallet-vesting/std",
	"frame-system/std",
	"xcm/std",
	"xcm-executor/std",
	"log/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"primitives/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-vesting/try-runtime",
]
