[package]
name = "polkadot-simnet"
version = "0.9.13"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
system = { package = "frame-system", git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
support = { package = "frame-support", git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
benchmarking = { package = "frame-benchmarking", git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
collective = { package = "pallet-collective", git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
democracy = { package = "pallet-democracy", git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }

test-runner = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sc-consensus-babe = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sc-consensus-manual-seal = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sc-service = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sc-executor = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sc-consensus = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sc-tracing = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sc-cli = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }

sp-consensus-babe = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sp-runtime = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }
sp-keyring = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.13-fix" }

polkadot-primitives = { path = "../../../../primitives" }
polkadot-cli = { path = "../../../../cli", features = ["cli"] }
polkadot-service = { path = "../../../../node/service" }
polkadot-runtime = { path = "../../../../runtime/polkadot" }
polkadot-runtime-common = { path = "../../../../runtime/common" }

codec = { package = "parity-scale-codec", version = "2.0.0" }
structopt = "0.3.25"

[dev-dependencies]
log = "0.4.14"
