[package]
name = "polkadot-simnet-test"
version = "0.9.15"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# substrate primitives
sp-core = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sp-blockchain = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
sp-runtime = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }

# frame pallets
system = { package = "frame-system", git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }
balances = { package = "pallet-balances", git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }

# substrate client libs
sc-client-api = { git = "https://github.com/zzm-Zhong/substrate", branch = "polkadot-v0.9.15-fix" }

# polkadot deps
polkadot-simnet = { path = "../common" }
polkadot-runtime = { path = "../../../../runtime/polkadot" }
